<resources>
    <string name="app_name">谭八爷</string>
    <string name="home">首页</string>
    <string name="shop">商城</string>
    <string name="discover">发现</string>
    <string name="my">我的</string>
    <string name="no_data">已经到底啦</string>
    <string name="loading">正在加载...</string>
    <string name="submitting">正在提交...</string>
    <string name="recycler__footer_network_error">点击重新加载</string>
    <string name="account_hint">请输入账号</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="find_passwd">找回密码</string>
    <string name="star_goods">今日推荐</string>
    <string name="goods_key_tip">请输入产品关键字</string>
    <string name="kuaibao">noticie</string>
    <string name="more">更多</string>
    <string name="brand_story">最新消息</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="register_now">立即注册</string>
    <string name="connect_server_failed">连接服务器失败，请稍候再试</string>
    <string name="setting">设置</string>
    <string name="submit">提交</string>
    <string name="go_setting">去设置</string>
    <string name="permission_request">权限申请</string>
    <string name="leave_message">留言</string>
    <string name="account_or_pwd_empty">账号、密码不能为空</string>
    <string name="logining">正在登录...</string>
    <string name="login_failed">网络异常，请检查网络连接</string>
    <string name="login_failed_error_username_pwd">用户名或密码错误</string>
    <string name="account_verify_doing">账号正在审核中</string>
    <string name="account_forbid">账号已被禁用，请联系系统管理员</string>
    <string name="send">发送</string>
    <string name="down_speak">按住说话</string>
    <string name="up_over">松开结束</string>
    <string name="connect_customer_failed">连接客服失败，请稍候再试</string>
    <string name="document">文档</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="all_image">所有图片</string>
    <string name="select_file">选择文件</string>
    <string name="select_documents">选择文档</string>
    <string name="select_img_folder">选择相册</string>
    <string name="select_music">选择音乐</string>
    <string name="select_video">选择视频</string>
    <string name="root_dir">根目录</string>
    <string name="file_count">(%d)</string>
    <string name="phone">手机</string>
    <string name="camera">相机</string>
    <string name="take_picture">拍摄照片</string>
    <string name="preview">预览</string>
    <string name="preview_num">预览(%d)</string>
    <string name="send_num">发送(%1$d/%2$d)</string>
    <string name="image_num">%d张</string>
    <string name="image_preview_num">%1$d/%2$d</string>
    <string name="select">选择</string>
    <string name="over_max_image_select">最多只能选择%d张图片</string>
    <string name="origin_image_size">原图(%s)</string>
    <string name="score">积分：</string>
    <string name="select_img">选择图片</string>
    <string name="ok">确认</string>
    <string name="yestoday">昨天</string>
    <string name="official_custmer">官方客服</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">查看所有订单</string>
    <string name="all">全部</string>
    <string name="unpay">待付款</string>
    <string name="payed">已付款</string>
    <string name="undeliver">待发货</string>
    <string name="delivered">已发货</string>
    <string name="refunded">已退款</string>
    <string name="refund">退款/售后</string>
    <string name="preparing">备货中</string>
    <string name="refund_applyed">退款中</string>
    <string name="refund_apply">申请退款中</string>
    <string name="canceled">已取消</string>
    <string name="complete">已收货</string>
    <string name="my_reward">我的销量</string>
    <string name="wallet">我的钱包</string>
    <string name="coupon">优惠券</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="my_invitation">我的邀请</string>
    <string name="my_invite_code">我的邀请码</string>
    <string name="notice">公告</string>
    <string name="delivery_address">收货地址</string>
    <string name="score_shop">积分商城</string>
    <string name="custom_service">客服服务</string>
    <string name="brand_question">品牌问答</string>
    <string name="question">问：%s</string>
    <string name="answer">答：%s</string>
    <string name="qrcode_scan">扫一扫</string>
    <string name="camera_open_failed">打开相机失败</string>
    <string name="qrcode_scan_tip">将取景框对准二维码，即可自动扫描</string>
    <string name="qr_light_on">开灯</string>
    <string name="qr_light_off">关灯</string>
    <string name="qr_album_on">相册</string>
    <string name="sound">声音</string>
    <string name="vibrate">振动</string>
    <string name="sound_tip">关闭后，收到新消息不会响铃提示</string>
    <string name="vibrate_tip">关闭后，收到新消息不会振动提示</string>
    <string name="tel_num">手机号</string>
    <string name="new_tel_num">新手机号</string>
    <string name="pls_input_tel">请输入11位手机号码</string>
    <string name="pls_input_passwd_register">请输入密码(6-30位)</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="pls_reget_msg_code">请重新获取短信验证码</string>
    <string name="sending_msg_code">正在发送验证码...</string>
    <string name="code_sent">已发送(%1$ss)</string>
    <string name="tip_passwd">请输入密码</string>
    <string name="passwd">密码</string>
    <string name="paypasswd">支付密码</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="auth_code">验证码</string>
    <string name="message_auth_code">短信验证码</string>
    <string name="code">验证码</string>
    <string name="tip_msg_code">请输入短信验证码</string>
    <string name="invite_code_error">邀请人人不能为空</string>
    <string name="invite_code_checking">正在验证邀请码...</string>
    <string name="code_sending">正在发送验证码...</string>
    <string name="register_doing">注册中...</string>
    <string name="code_send_failed">验证码发送失败，请稍候再试</string>
    <string name="invite_code_null">邀请码不能为空</string>
    <string name="check_qrcode_failed">请检查该图片是否包含二维码</string>
    <string name="qrcode_parsing">正在解析二维码...</string>
    <string name="update_login_pwd">登录密码</string>
    <string name="pay_passwd">支付密码</string>
    <string name="forget_pay_passwd">忘记支付密码</string>
    <string name="version_check">版本检测</string>
    <string name="clear_cache">清除缓存</string>
    <string name="faze_mode">勿扰模式</string>
    <string name="origin_passwd">原密码</string>
    <string name="new_passwd">新密码</string>
    <string name="new_passwd_confirm">确认新密码</string>
    <string name="passwd_confirm">确认密码</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出登录</string>
    <string name="permission_sd">在设置-应用-%1$s-权限管理中开启存储，以正常更新%2$s</string>
    <string name="permission_sd_camera">在设置-应用-%1$s-权限管理中开启存储、相机权限，以正常使用%2$s</string>
    <string name="permission_camera">在设置-应用-%1$s-权限管理中开启相机权限，以正常使用拍照、扫一扫等功能，以正常使用%2$s</string>
    <string name="reset">重置</string>
    <string name="my_oder">我的订单</string>
    <string name="rmb_price">￥%s</string>
    <string name="rmb_price2">%s元</string>
    <string name="stock_label">库存:&#160;%s</string>
    <string name="weight_label">净含量:&#160;%s</string>
    <string name="goods_buy_number">月销:&#160;%s</string>
    <string name="address_manager">收货地址管理</string>
    <string name="address_select">收货地址选择</string>
    <string name="add_new_address">添加新地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="take_user_label">收货人:&#160;%s</string>
    <string name="take_phone_label">联系电话:&#160;%s</string>
    <string name="take_address_label">收货地址:&#160;%s</string>
    <string name="city_select">地区选择</string>
    <string name="pls_select">请选择</string>
    <string name="cancel_confirm">确认放弃此次编辑？</string>
    <string name="latest_version">已是最新版本</string>
    <string name="find_new_version">发现新版本(%s)，是否立即更新?</string>
    <string name="find_new_version_force">发现新版本(%s)，请立即更新</string>
    <string name="updating">应用更新</string>
    <string name="version_waiting">正在下载...</string>
    <string name="check_sdcard">请检查SD卡是否已插入手机</string>
    <string name="failed_download_apk">下载最新安装包失败，请稍候重试</string>
    <string name="take_user_label1">收货人:</string>
    <string name="take_phone_label1">联系手机:</string>
    <string name="take_city_label1">所在地区:</string>
    <string name="take_address_label1">详细地址:</string>
    <string name="take_address_default">默认地址</string>
    <string name="save">保存</string>
    <string name="select_ok">选好了(%d)</string>
    <string name="total_price">总共%s元</string>
    <string name="order_confirm">确认订单</string>
    <string name="goods_detail">商品详情</string>
    <string name="add_to_freq_addr">加入常用地址管理</string>
    <string name="select_freq_addr">选择常用地址</string>
    <string name="use_default_addr">使用默认地址</string>
    <string name="sel_express">配送方式:</string>
    <string name="remark">备注:</string>
    <string name="refundreason">退款原因:</string>
    <string name="submit_order">提交订单</string>
    <string name="submit_order_now">立即支付</string>
    <string name="add_to_cart">加入购物清单</string>
    <string name="total_price2">合计金额:%s元</string>
    <string name="price">单价:%s元</string>
    <string name="buy_num">购买数量:%s</string>
    <string name="add_adress">添加收货地址</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="express">快递选择</string>
    <string name="my_info">个人资料</string>
    <string name="blogweb">博客</string>
    <string name="express_price">&#160;(含运费%s)</string>
    <string name="computing_price">正在计算总价...</string>
    <string name="empty_data">暂无数据</string>
    <string name="order_list_empty">您还没有相关的订单</string>
    <string name="notice_list_empty">暂无公告</string>
    <string name="search_goods_list_empty">没有搜索到相关商品</string>
    <string name="data_empty">您还没有相关数据</string>
    <string name="order_no_label">订单号:&#160;%s</string>
    <string name="goods_num">共%d件商品</string>
    <string name="total_price3">合计:&#160;</string>
    <string name="total_price4">合计:&#160;%s</string>
    <string name="order_detail">订单详情</string>
    <string name="order_price">订单总价</string>
    <string name="goods_total_price">商品总价</string>
    <string name="express_price_label">快递费</string>
    <string name="order_no">订单号:</string>
    <string name="create_time">创建时间:</string>
    <string name="express_type">快递方式:</string>
    <string name="from_photo">从相册选择</string>
    <string name="translate_or_scale">移动和缩放</string>
    <string name="img_load_fail">图片加载失败</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_now">立即支付</string>
    <string name="cancel_order_confirm">确认取消此订单？</string>
    <string name="order_pay">支付</string>
    <string name="order_price_label">订单总价:&#160;</string>
    <string name="pay_type">选择支付方式:&#160;</string>
    <string name="invalid_order">订单信息异常</string>
    <string name="pay_success_tip1">您已成功支付%s元</string>
    <string name="pay_success_tip2">非常感谢您够买我们的商品</string>
    <string name="copy">复制</string>
    <string name="need_pay">还需支付</string>
    <string name="order_refund">申请退款</string>
    <string name="order_refund_confirm">确认申请退款？</string>
    <string name="confirm_clear_cache">确认清除缓存</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="realname">真实姓名</string>
    <string name="bank_type">开户银行</string>
    <string name="bank">银行卡号</string>
    <string name="bank_success">添加银行卡成功</string>
    <string name="bank_false">添加银行卡失败</string>
    <string name="withdraw_fail">提现失败</string>
    <string name="old_paypasswd">原支付密码</string>
    <string name="your_invite_code_tip">您的邀请码是</string>
    <string name="invite_code_func_desc1">邀请码用来邀请朋友加入谭八爷(注册时使用)</string>
    <string name="invite_code_func_desc2">只要用心经营，强大团队，就有意想不到的收获！</string>
    <string name="input_tip_old_passwd">请输入原密码</string>
    <string name="input_tip_passwd_again">请再次输入密码</string>
    <string name="company_name">自贡市谭八爷商贸有限公司</string>
    <string name="tech_support">技术支持：四川佰谷科技有限公司</string>
    <string name="app_use_agreement">软件许可使用协议</string>
    <string name="copyright">Copyright©2017-2019 All Rights Reserved.</string>
    <string name="pay_password">请设置6位的支付密码</string>
</resources>