<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_oldpaypsd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/old_paypasswd"
                android:textColor="@color/main_text"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_old_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:hint="@string/input_tip_old_passwd"
                android:maxLength="@integer/paypasswd_length"
                android:inputType="numberPassword"
                android:textColor="@color/main_text"
                android:layout_weight="1"
                android:textSize="15dp" />
            <Button
                android:id="@+id/btn_forgetpsd"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/reg_bt"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forget_passwd"
                android:textColor="@color/article_content"
                android:textSize="12dp" />
        </LinearLayout>

        <View
            android:id="@+id/line_oldpay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/paypasswd"
                android:textColor="@color/main_text"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:maxLength="6"
                android:background="@color/white"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM`-=[]\;,./~!@#$%^*()_+}{:?"
                android:hint="@string/pay_password"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:textColor="@color/main_text"
                android:textSize="15dp" />

            <com.baigu.dms.common.view.SwitchButton
                android:id="@+id/sb_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:slipBtn="@mipmap/switch_button"
                app:switchOffBg="@mipmap/switch_bg_switch"
                app:switchOnBg="@mipmap/switch_bg_switch" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/passwd_confirm"
                android:textColor="@color/main_text"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_passwd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM`-=[]\;,./~!@#$%^*()_+}{:?"
                android:hint="@string/input_tip_passwd_again"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:textColor="@color/main_text"
                android:textSize="15dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/line" />
        <LinearLayout
            android:id="@+id/ll_pay_passwd_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/code"
                android:textColor="@color/main_text"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_msg_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tip_msg_code"
                android:textSize="15dp"
                android:maxLength="12"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"/>

            <Button
                android:id="@+id/btn_send_code"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/reg_bt"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/get_msg_code"
                android:textColor="@color/article_content"
                android:textSize="12dp" />
        </LinearLayout>
        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/line" />
    </LinearLayout>
</LinearLayout>