<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="@color/main_text"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/main_text"
            android:textSize="14dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="0.5dp"
        android:background="@color/line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_version_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="left"
                android:textColor="@color/main_text"
                android:textSize="14dp"
                android:text="@string/version_check"/>
            <TextView
                android:id="@+id/tv_latest_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textColor="@color/text_time"
                android:textSize="13dp"
                android:text="@string/latest_version"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/line" />
        <TextView
            android:id="@+id/tv_app_use_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="left"
            android:textColor="@color/main_text"
            android:textSize="14dp"
            android:text="@string/app_use_agreement"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/company_name"
            android:textColor="@color/color_666666"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/copyright"
            android:textColor="@color/color_666666"
            android:textSize="13dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tech_support"
            android:textColor="@color/color_666666"
            android:textSize="13dp"/>
    </LinearLayout>
</LinearLayout>