<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:paddingTop="0dp">

    <include layout="@layout/view_toolbar" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="30dp"
            android:background="@color/line" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tel_num"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_tel"
                style="@style/edit_text_unline"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/color_666666"
                android:hint="@string/pls_input_tel"
                android:inputType="number"
                android:maxLength="11"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColorHint="@color/line" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/line_padding_left_15" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/passwd"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/et_passswd"
                style="@style/edit_text_unline"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pls_input_passwd_register"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM`-=[]\;,./~!@#$%^*()_+}{:?"
                android:inputType="textPassword"
                android:maxLength="@integer/passwd_length"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColorHint="@color/line" />

            <com.baigu.dms.common.view.SwitchButton
                android:id="@+id/sb_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:slipBtn="@mipmap/switch_button"
                app:switchOffBg="@mipmap/switch_bg_switch"
                app:switchOnBg="@mipmap/switch_bg_switch" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/line_padding_left_15" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/code"
                android:textColor="@color/main_text"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/et_msg_code"
                style="@style/edit_text_unline"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tip_msg_code"
                android:maxLength="12"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:singleLine="true"
                android:textColorHint="@color/line" />

            <Button
                android:id="@+id/btn_msg_code"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/reg_bt"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/get_msg_code"
                android:textColor="@color/article_content"
                android:textSize="12dp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </TableLayout>
</LinearLayout>
